--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Update docs
         run: docker-compose up -d
       - name: Push nginx config
-        run: cp docs/docs.conf /etc/nginx/conf.d
+        run: cp docs/docs.conf docs/docs_pswd.txt /etc/nginx/conf.d
       - name: Restart nginx
         run: sudo nginx -s reload
