--- a/docs/docs.conf
+++ b/docs/docs.conf
@@ -10,6 +10,8 @@ server {
     listen 443 ssl;
     server_name godoc.customapp.tech www.godoc.customapp.tech;
     location / {
+        auth_basic "Вход только для ООО ПСОИК";
+        auth_basic_user_file /etc/nginx/conf.d/docs_pswd.txt
         proxy_http_version 1.1;
         proxy_pass http://localhost:6060;
     }
