fix basic auth in nginx conf

--- a/docs/docs.conf
+++ b/docs/docs.conf
@@ -11,7 +11,7 @@ server {
     server_name godoc.customapp.tech www.godoc.customapp.tech;
     location / {
         auth_basic "Вход только для ООО ПСОИК";
-        auth_basic_user_file /etc/nginx/conf.d/docs_pswd.txt
+        auth_basic_user_file /etc/nginx/conf.d/docs_pswd.txt;
         proxy_http_version 1.1;
         proxy_pass http://localhost:6060;
     }
